--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bcrypt-nodejs": "^0.0.3",
         "body-parser": "^1.18.2",
         "connect-multiparty": "^2.0.0",
+        "debug": "^3.1.0",
         "express": "^4.16.2",
         "jwt-simple": "^0.5.1",
         "moment": "^2.19.1",
