--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "engines": {
         "node": "10.2.1"
     },
-    "main": "index.js",
+    "main": "./bin/www",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "nodemon ./bin/www",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -32,6 +32,7 @@
         "debug": "^3.1.0",
         "express": "^4.16.2",
         "jwt-simple": "^0.5.1",
+        "log4js": "^3.0.5",
         "moment": "^2.19.1",
         "pg": "^7.4.3",
         "pg-hstore": "^2.3.2",
