--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-    "name": "controlaccessph",
+    "name": "phman",
     "version": "1.0.0",
-    "description": "Server nodejs para la gestion del control de acceso peatonal y vehicular de conjuntos residenciales",
-    "engines": {
-        "node": "10.2.1"
-    },
-    "main": "./bin/www",
+    "description": "",
+    "main": "index.js",
     "scripts": {
-        "start": "nodemon ./bin/www",
+        "start": "nodemon --exec babel-node ./bin/www",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -24,21 +21,25 @@
     "bugs": {
         "url": "https://github.com/ArielJose55/ControlAccessPH/issues"
     },
-    "homepage": "https://github.com/ArielJose55/ControlAccessPH#readme",
-    "dependencies": {
-        "bcrypt-nodejs": "^0.0.3",
-        "body-parser": "^1.18.2",
-        "connect-multiparty": "^2.0.0",
-        "debug": "^3.1.0",
-        "express": "^4.16.2",
-        "jwt-simple": "^0.5.1",
-        "log4js": "^3.0.5",
-        "moment": "^2.19.1",
-        "pg": "^7.4.3",
-        "pg-hstore": "^2.3.2",
-        "sequelize": "^4.38.0"
-    },
+    "homepage": "https://github.com/ArielJose55/ControlAccessPH#README",
     "devDependencies": {
-        "nodemon": "^1.12.1"
+        "@babel/core": "^7.2.2",
+        "@babel/node": "^7.2.2",
+        "@babel/preset-env": "^7.3.1",
+        "nodemon": "^1.18.10"
+    },
+    "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "^1.18.3",
+        "connect-multiparty": "^2.2.0",
+        "debug": "^4.1.1",
+        "dotenv": "^6.2.0",
+        "express": "^4.16.4",
+        "jwt-simple": "^0.5.5",
+        "log4js": "^4.0.2",
+        "moment": "^2.24.0",
+        "pg": "^7.8.0",
+        "pg-hstore": "^2.3.2",
+        "sequelize": "^4.42.0"
     }
 }
