--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
         "debug": "^4.1.1",
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
+        "http-status": "^1.3.1",
         "jshint": "^2.10.1",
         "jwt-simple": "^0.5.5",
         "log4js": "^4.0.2",
         "moment": "^2.24.0",
+        "non-blocking-bcrypt-nodejs": "^1.0.0",
         "pg": "^7.8.0",
         "pg-hstore": "^2.3.2",
         "sequelize": "^4.42.0"
